--- a/src/Hive/Sidebar/Grid/GridInfo/GridInfo.module.css
+++ b/src/Hive/Sidebar/Grid/GridInfo/GridInfo.module.css
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0px;
 }
 
 .button:hover,
