--- a/src/Hive/Sidebar/Progress/Progress.module.css
+++ b/src/Hive/Sidebar/Progress/Progress.module.css
@@ -61,6 +61,7 @@
   color: #999;
   font-size: 20px;
   margin-left: 16px;
+  padding: 0px;
 }
 
 .help:focus,
