--- a/src/Hive/Sidebar/WordList/WordList.module.css
+++ b/src/Hive/Sidebar/WordList/WordList.module.css
@@ -34,6 +34,7 @@
 
 .buttons button {
   margin: 4px 0px;
+  padding: 0px;
 }
 
 @media (max-width: 800px) {
